# generatesimulationstructure

./: README.rst  genparafile.py  local_template.sh  new_simulation.py  pyproject.toml  simulationgenerator.py  tstmd.py
empty_template_simulatie/: generate-parameter-files.py  job.slurm  template.par  template.py  template_job_file
example/: config.py  job.slurm  template.par  template_job_file
src/: __init__.py  local_template.sh  simulationgenerator.py  tst.py
